Fix QTBUG-9814: pos() causes buffer offset issues on large text files.

Please see QTBUG-9814 for context.  When reading large files that are
greater in size than the QTEXTSTREAM_BUFFERSIZE buffer, calling pos()
caused erroneous buffer positioning. The cause of this was
QTextStreamPrivate::readBufferOffset value being updated, but
QTextStreamPrivate::readConverterSavedStateOffset was not.  Usually, if
pos() is called, it is called multiple times. Since
QTextStreamPrivate::readConverterSavedStateOffset was never reset,
QTextStreamPrivate::readBufferOffset would accumulate the wrong position
and QTextStreamPrivate::consume() will 'discard' the wrong number of
bytes from the buffer.

Task-number: QTBUG-9814
Reviewed-by: pending